--- a/Gemsboks page.html
+++ b/Gemsboks page.html
@@ -28,8 +28,8 @@
           </div>
             </div>
      <div id="tabs-bottom">
-                   <a href="#">WEATHER</a>
-                   <a href="#">FEEDBACK</a>
+                   <a href="weather%20page.html">WEATHER</a>
+                   <a href="feedback%20page.html">FEEDBACK</a>
             </div>
       </body>
 </html>
