--- a/animal page link.html
+++ b/animal page link.html
@@ -9,9 +9,10 @@
                   <img src="images/images.logo01jpeg-1.jpg"/>
             </div>
             <div id="tabs-top">
-                  <a href="#">ANIMALS</a>
-                  <a href="#">MAP</a>
-                  <a href="#">PLACES</a>
+                  <div id="tabs-top">
+                  <a href="animal%20page.html">ANIMALS</a>
+                  <a href="index.html">MAP</a>
+                  <a href="places%20page.html">PLACES</a>
             </div>
             <div id="main">
                   <div id="content">
@@ -38,8 +39,8 @@
                   </div>
             </div>
             <div id="tabs-bottom">
-                   <a href="#">WEATHER</a>
-                   <a href="#">FEEDBACK</a>
+                     <a href="weather%20page.html">WEATHER</a>
+                   <a href="feedback%20page.html">FEEDBACK</a>
             </div>
       </body>
 </html
