--- a/animal page.html
+++ b/animal page.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
       <head>
-            <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style.css">
       </head>
 
       <body>
-            <div id="header">
-                  <img src="images/images.logo01jpeg-1.jpg"/>
+      <div id="header">
+       <img src="images/images.logo01jpeg-1.jpg"/>
             </div>
             <div id="tabs-top">
                   <div id="tabs-top">
-                  <a href="animal%20page.html">ANIMALS</a>
+                  <a href="animal%20page%20link.html">ANIMALS</a>
                   <a href="index.html">MAP</a>
                   <a href="places%20page.html">PLACES</a>
             </div>
@@ -18,7 +18,7 @@
                   <div id="content">
                        <a class="info-box" href="#">
                             <img class="right" src="images/elephant-7036431__480.jpg"/>
-                            <img src="images/elephant-111695__480.jpg".png/>
+                            <img src="images/elephant-111695__480.jpg"/>
                             <h3>ELEPHANT</h3>
                             <p>Gentle giants of the jungle</p>
                        </a>
