--- a/feedback page.html
+++ b/feedback page.html
@@ -11,7 +11,7 @@
         </div>
            
         <div id="tabs-top">
-                  <a href="animal%20page.html">ANIMALS</a>
+                   <a href="animal%20page%20link.html">ANIMALS</a>
                   <a href="index.html">MAP</a>
                   <a href="places%20page.html">PLACES</a>
         </div>
