--- a/Giraffes page.html
+++ b/Giraffes page.html
@@ -8,8 +8,8 @@
             <div id="header">
                   <img src="images/images.logo01jpeg-1.jpg"/>
             </div>
-            <div id="tabs-top">
-                   <a href="animal%20page%20link.html">ANIMALS</a>
+             <div id="tabs-top">
+                  <a href="animal%20page.html">ANIMALS</a>
                   <a href="index.html">MAP</a>
                   <a href="places%20page.html">PLACES</a>
             </div>
