--- a/Insect  House.html
+++ b/Insect  House.html
@@ -16,9 +16,9 @@
             <div id="main">
                   <div id="content">
                        <div id="info-box-full">
-                            <img src="images/AMPHITHEATRE.jpg"/>
-                            <h3>AMPHITHEATRE</h3>
-    <p>a building, usually circular or oval, in which tiers of seats rise from a central open arena, as in those of ancient Rome a place where contests are held;arena any level circular area of ground surrounded by higher ground the first tier of seats in the gallery of a theatre any similarly designated seating area in a theatre a lecture room in which seats are tiered away from a central area</p>
+                            <img src="images/IN.jpg"/>
+                            <h3>INSECT HOUSE</h3>
+    <p>An insect hotel, also known as a bug hotel or insect house, is a manmade structure created to provide shelter for insects. They can come in a variety of shapes and sizes depending on the specific purpose or specific insect it is catered to. Most consist of several different sections that provide insects with nesting facilities – particularly during winter, offering shelter or refuge for many types of insects. Their purposes include hosting pollinators</p>
      </div>
           </div>
             </div>
