--- a/Lost Forest .html
+++ b/Lost Forest .html
@@ -16,9 +16,9 @@
             <div id="main">
                   <div id="content">
                        <div id="info-box-full">
-                            <img src="images/AMPHITHEATRE.jpg"/>
-                            <h3>AMPHITHEATRE</h3>
-    <p>a building, usually circular or oval, in which tiers of seats rise from a central open arena, as in those of ancient Rome a place where contests are held;arena any level circular area of ground surrounded by higher ground the first tier of seats in the gallery of a theatre any similarly designated seating area in a theatre a lecture room in which seats are tiered away from a central area</p>
+                            <img src="images/LOST.jpg"/>
+                            <h3>LOST FOREST</h3>
+    <p>The Lost Forest tells the story of a lucky error that preserved 144 acres of old-growth red and white pine in Minnesota. With gentle humor, Phyllis Root takes readers deep into a stand of virgin pine, one of the last and largest in the state, where U.S. history and natural history meet.</p>
      </div>
           </div>
             </div>
