--- a/Monkey Trail.html
+++ b/Monkey Trail.html
@@ -16,9 +16,9 @@
             <div id="main">
                   <div id="content">
                        <div id="info-box-full">
-                            <img src="images/AMPHITHEATRE.jpg"/>
-                            <h3>AMPHITHEATRE</h3>
-    <p>a building, usually circular or oval, in which tiers of seats rise from a central open arena, as in those of ancient Rome a place where contests are held;arena any level circular area of ground surrounded by higher ground the first tier of seats in the gallery of a theatre any similarly designated seating area in a theatre a lecture room in which seats are tiered away from a central area</p>
+                            <img src="images/MON.jpg"/>
+                            <h3>MONKEY TRAIL</h3>
+    <p>The Scopes Monkey Trial started as an effort by the ACLU to challenge the constitutionality of a Tennessee law that forbade teaching the theory of evolution in public schools. The Tennessee Supreme Court found the law forbidding the teaching of evolution to be constitutional. In 1968, the U.S. Supreme Court found a similar law in Arkansas to be a violation of the First Amendment. In this photo, evangelist T.T. Martin's books against the theory of evolution are sold in Dayton, Tennessee, at the Scopes trial.AP Photo, used with permission from the Associated Press</p>
      </div>
           </div>
             </div>
