--- a/Wild Things Coffee Shop.html
+++ b/Wild Things Coffee Shop.html
@@ -16,9 +16,19 @@
             <div id="main">
                   <div id="content">
                        <div id="info-box-full">
-                            <img src="images/AMPHITHEATRE.jpg"/>
-                            <h3>AMPHITHEATRE</h3>
-    <p>a building, usually circular or oval, in which tiers of seats rise from a central open arena, as in those of ancient Rome a place where contests are held;arena any level circular area of ground surrounded by higher ground the first tier of seats in the gallery of a theatre any similarly designated seating area in a theatre a lecture room in which seats are tiered away from a central area</p>
+                            <img src="images/wild.jpg"/>
+                            <h3>WILD THINGS COFFEE SHOP</h3>
+    <p>Wild Thing cafes are one part of the overall organisation. This is how we started out and are at the heart of everything we do!
+
+The cafes help us to fund our community work whilst providing delicious food in a relaxed setting for our lovely customers. 
+
+Our  plant based cafes imbed our social goals:
+
+-To get more people eating veg
+
+-To reduce environmental impacts
+
+-To fight food poverty.</p>
      </div>
           </div>
             </div>
