--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
             <div id="header">
                   <img src="images/images.logo01jpeg-1.jpg"/>
             </div>
-            <div id="tabs-top">
-                  <a href="animal%20page%20link.html">ANIMALS</a>
+             <div id="tabs-top">
+                  <a href="animal%20page.html">ANIMALS</a>
                   <a href="index.html">MAP</a>
                   <a href="places%20page.html">PLACES</a>
             </div>
             <div id="main-home">
-                  <img src="images/images.Ajpeg.jpg">
+                  <img src="images/images.Ajpeg.jpg" width="1020">
             </div>
-            <div id="tabs-bottom">
+            <div id="tabs-bottom">  
                    <a href="weather%20page.html">WEATHER</a>
                    <a href="feedback%20page.html">FEEDBACK</a>
             </div>
