--- a/feedback page.html
+++ b/feedback page.html
@@ -10,11 +10,11 @@
                        
         </div>
            
-        <div id="tabs-top">
-                   <a href="animal%20page%20link.html">ANIMALS</a>
+         <div id="tabs-top">
+                  <a href="animal%20page.html">ANIMALS</a>
                   <a href="index.html">MAP</a>
                   <a href="places%20page.html">PLACES</a>
-        </div>
+            </div>
         <div id="main">
              <div id="content">
                    <div id="info-box-full">
