--- a/house page.html
+++ b/house page.html
@@ -8,11 +8,11 @@
         <div id="header">
              <img src="images/images.logo01jpeg-1.jpg"/>
         </div>
-        <div id=tabs-top>
-               <a href="animal%20page%20link.html">ANIMALS</a>
+         <div id="tabs-top">
+                  <a href="animal%20page.html">ANIMALS</a>
                   <a href="index.html">MAP</a>
                   <a href="places%20page.html">PLACES</a>
-        </div>
+            </div>
         <div id="main">
              <div id="content">
                    <div id="info-box-full">
