--- a/Dine @The Zoo.html
+++ b/Dine @The Zoo.html
@@ -16,7 +16,7 @@
             <div id="main">
                   <div id="content">
                        <div id="info-box-full">
-                            <img src="images/DINE.html"/>
+                            <img src="images/dine%20things.jpg"/>
                             <h3>DINE@THE ZOO</h3>
     <p>Aside from picky eating the other major hurdle to successfully feeding a family is time, or lack thereof. At the end of a long day the last thing anyone wants to do is spend hours working in the kitchen, especially when your kids are underfoot asking repeatedly when dinner will be ready. I am a huge believer in meal planning, it takes a lot of stress off me to have a plan in place. I also rely heavily on doing my basic food prep well before dinner time. For example, after breakfast when I’m doing the dishes I’ll take an extra 5 minutes to clean and chop a head of broccoli to be steamed for dinner that night. When I grate cheese for one recipe I do twice as much as I need so that I don’t have to do it again later in the week. I love marinades because you can make it the night before after the kids are in bed. If the kids are happily playing together I’ll take a few minutes to make a pot of rice to reheat later.</p>
      </div>
